[project]
name = "ralpher"
version = "0.1.0"
description = "A ralph loop"
requires-python = ">=3.14"
dependencies = [
    "cappa>=0.31.0",
    "colorama>=0.4.6",
    "jinja2>=3.1.6",
    "orjson>=3.11.6",
]

[dependency-groups]
dev = ["pytest>=9.0.2"]


[tool.ruff]
line-length = 160


[tool.ruff.format]
quote-style = "single"


[tool.ruff.lint]
# B: flake8-bugbear
# E: pycodestyle
# F: Pyflakes
# I: isort
# ICN: import convention
# S: bandit
# SIM: flake8-simplify
# TID: tidy imports
# UP: pyupgrade
select = [
    "B",
    "E",
    "F",
    "I",
    "ICN",
    "S",
    "SIM",
    "NPY201",
    "TID",
    # "UP",
]
# ignore
# E501 (line length violations)
# E722 Do not use bare `except`
# ICN001 import numpy, pandas ok
# SIM108 Use ternary operator
# SIM102 collapsible-if
# S110 try/except/pass
# S311 random
ignore = ["E501", "E722", 'ICN001', 'SIM108', 'SIM102', 'S110', 'S311']

[tool.ruff.lint.per-file-ignores]
"**/test*.py" = [
    "ARG",     # Unused function args -> fixtures nevertheless are functionally relevant...
    "FBT",     # Don't care about booleans as positional arguments in tests, e.g. via @pytest.mark.parametrize()
    "F403",    # import *
    "PLR2004", # Magic value used in comparison, ...
    "S101",    # asserts allowed in tests...
    "S311",    # Standard pseudo-random generators are not suitable for cryptographic purposes
    "S608",    # SQL injection
]
"**/fixtures/*.py" = [
    "ARG",     # Unused function args -> fixtures nevertheless are functionally relevant...
    "FBT",     # Don't care about booleans as positional arguments in tests, e.g. via @pytest.mark.parametrize()
    "F403",    # import *
    "PLR2004", # Magic value used in comparison, ...
    "S101",    # asserts allowed in tests...
    "S311",    # Standard pseudo-random generators are not suitable for cryptographic purposes
    "S608",    # SQL injection
]

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["ralpher", "ralphlib"]
known-third-party = ["cappa", "colorama", "orjson", "pytest"]
